--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <section class="intro">
             <h2>Descubra as últimas tendências em esmaltes</h2>
             <p>Aqui você encontra as melhores dicas e produtos para manter suas unhas sempre lindas e na moda.</p>
-            <img src="imgs/esmalte1.jpg" alt="Esmalte fashion">
+            <img src="imgs/esmalte metalico.jpeg" alt="Esmalte fashion">
+            <img src="imgs/image.png" alt="Esmalte Cremoso">
         </section>
         
         <section class="categorias">
