--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="produto.html/index.html">Produtos</a></li>
             </ul>
         </nav>
     </header>
@@ -21,8 +21,10 @@
         <section class="intro">
             <h2>Descubra as últimas tendências em esmaltes</h2>
             <p>Aqui você encontra as melhores dicas e produtos para manter suas unhas sempre lindas e na moda.</p>
-            <img src="imgs/esmalte metalico.jpeg" alt="Esmalte fashion">
-            <img src="imgs/image.png" alt="Esmalte Cremoso">
+            <img src="imgs/image.png">
+            <img src="imgs/esmalte metalico.jpeg">
+            <img src="imgs/esmalte glitter.webp"> 
+           
         </section>
         
         <section class="categorias">
