--- a/produto.html/index.html
+++ b/produto.html/index.html
@@ -22,12 +22,16 @@
             <h2>Nossos Esmaltes</h2>
             <ul>
                 <li>
-                    <img src="https://acdn.mitiendanube.com/stores/002/908/593/products/sofisticada-esmalte-metalico-bella-brazil-21-a329e72a6e8bc24e2c16921908224574-1024-1024.jpeg" alt="Esmalte metálico">
+                    <img src="https://acdn.mitiendanube.com/stores/002/908/593/products/sofisticada-esmalte-metalico-bella-brazil-21-a329e72a6e8bc24e2c16921908224574-1024-1024.jpeg" width="250" alt="Esmalte metálico">
                     <p>Esmalte Metálico - Brilho intenso e duradouro.</p>
                 </li>
                 <li>
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8cZEStLXRmgdKDInJ6qwC74aVqEp2B0mmSQ&s" alt="Esmalte cremoso">
                     <p>Esmalte Cremoso - Acabamento suave e elegante.</p>
+                </li>
+                <li>
+                    <img src="https://d5gag3xtge2og.cloudfront.net/producao/34088761/G/image00001.jpeg" width="250">
+                    <p>Esmalte Glitter  - Acabamento elegante.</p>
                 </li>
             </ul>
         </section>
